<resources>
    <string name="app_name">SLTB_BUS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an User? Login</string>
    <string name="not_yet_reqistered_signup">Not yet registered? Signup</string>
    <string name="login">Login</string>
    <string name="frist_name">Frist Name</string>
    <string name="last_name">Last Name</string>
    <string name="nic">NIC</string>
    <string name="age">Age</string>
    <string name="driver_profile_creater">Driver Profile</string>
    <string name="save">Save</string>
    <string name="driver_dashbord">Driver Dashbord</string>
    <string name="view_profile">View Profile</string>
    <string name="start_tern">Start Tern</string>
    <string name="add_bus">Add bus</string>
    <string name="Driver_Profile">Driver Profile</string>
    <string name="name">Name</string>
    <string name="add_tren">Add Tren</string>
    <string name="add_bus_turn">Add Bus Turn</string>
    <string name="start_location">Start Location</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="Date">Date</string>
    <string name="no_fo_seat">No Fo Seat</string>
    <string name="passenger_dashbord">Passenger Dashboard</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="passenger_profile_creater">Passenger Profile</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="bus_number">Bus Number</string>
    <string name="copyright_sltb">Copyright SLTB</string>
    <string name="register">Register</string>
    <string name="booking">Booking</string>
    <string name="setting">setting</string>
    <string name="rout_check">Rout Check</string>
    <string name="time_table">Time Table</string>
    <string name="offers">Offers</string>
    <string name="contact_us">Contact us</string>
    <string name="welcome_to_sri_lanka_transportations_board">Welcome to Sri Lanka Transportations Board</string>
    <string name="cheack_booking">Cheack Booking</string>
    <string name="aboutus">The SLTB is an Institution that makes a great contribution to the State sector through the provision of passenger transport services in Sri Lanka and plays a leading role among the State Institutions serving the public on all days of the year.</string>
    <string name="sltbNumber">Mr.S.M.D.L.K.D. Alwis (Chairman)\t+94 117 706 010\t+94 112 589 683\tchairman@sltb.lk</string>
    <string name="end_location">End Location</string>
    <string name="search">Search</string>
    <string name="bus_numbe">Bus Number:</string>
    <string name="book_the_teket">Book the teket</string>
    <string name="update">Update</string>
    <string name="update_bus_tarn">Update Bus Tarn</string>
    <string name="add_massages">Add Massages</string>
    <string name="admin">Admin</string>
    <string name="driver_email">Driver Email</string>
    <string name="add_massage">Add Massages</string>
    <string name="massage">Massage</string>
    <string name="update_massage">Update Massage</string>
    <string name="massages">massages</string>
    <string name="notification">Notification</string>
    <string name="add_notification">Add Notification</string>
</resources>