<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6D6ED"
    tools:context=".DSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_profile_creater"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:hint="@string/frist_name"
            android:layout_marginTop="100dp"
            android:id="@+id/etFristName"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="8dp"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:hint="@string/last_name"
            android:layout_marginTop="20dp"
            android:id="@+id/etLastName"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="8dp"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:hint="@string/nic"
            android:layout_marginTop="20dp"
            android:id="@+id/etNIC"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="8dp"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:hint="@string/age"
            android:layout_marginTop="20dp"
            android:id="@+id/etAge"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="8dp"/>

        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            android:id="@+id/btnsave"
            android:textSize="18sp"
            app:cornerRadius = "30dp"
            android:layout_marginLeft="35dp"/>

    </LinearLayout>



</ScrollView>