<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6D6ED"
    tools:context=".DLoginActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_marginLeft="70dp"
        android:layout_width="260dp"
        android:layout_height="208dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/logo_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#C2A7CB"
        android:textSize="16sp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/login_email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#C2A7CB"
        android:textSize="16sp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/SignupRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/not_yet_reqistered_signup"
        android:textColor="#4B3B4E"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/copyright_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright_sltb"
        android:textColor="#4B3B4E"
        android:textSize="12sp" />

</RelativeLayout>