<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6D6ED"
    tools:context=".Driver.MainActivity">

    <TextView
        android:id="@+id/copyright_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="6dp"
        android:text="@string/copyright_sltb"
        android:textColor="#4B3B4E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnSavebus"
        app:layout_constraintTop_toBottomOf="@+id/btnContactus" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="182dp"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="152dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_sri_lanka_transportations_board"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="21dp"
        android:text="@string/view_profile"
        app:layout_constraintBottom_toTopOf="@+id/btnContactus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStartTern"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckBooking" />

    <Button
        android:id="@+id/btnStartTern"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="45dp"
        android:text="@string/start_tern"
        app:layout_constraintEnd_toStartOf="@+id/btnViewProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckBooking" />

    <Button
        android:id="@+id/btnCheckBooking"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/cheack_booking"
        app:layout_constraintBottom_toTopOf="@+id/btnViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnContactus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="51dp"
        android:text="@string/contact_us"
        app:layout_constraintBottom_toTopOf="@+id/copyright_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSavebus"
        app:layout_constraintTop_toBottomOf="@+id/btnViewProfile" />

    <Button
        android:id="@+id/btnSavebus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="45dp"
        android:text="@string/add_bus"
        app:layout_constraintEnd_toStartOf="@+id/btnContactus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTern" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckBooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/bus" />

</androidx.constraintlayout.widget.ConstraintLayout>