<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver.DriverProfileViewActivty">

    <TextView
        android:id="@+id/tvdprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/Driver_Profile"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFristname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tvEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFristname"
        app:layout_constraintStart_toStartOf="@+id/tvFristname" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tvAge"
        app:layout_constraintStart_toStartOf="@+id/tvAge"
        app:layout_constraintTop_toBottomOf="@+id/tvFristname" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tVId"
        app:layout_constraintStart_toStartOf="@+id/tVId"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tVId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="21dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAge" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFristname"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <TextView
        android:id="@+id/Nic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/nic"
        app:layout_constraintEnd_toEndOf="@+id/Age"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

</androidx.constraintlayout.widget.ConstraintLayout>