<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/tvdprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/update_profile"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="Last Name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFristname"
        app:layout_constraintStart_toEndOf="@+id/tvFristname" />

    <EditText
        android:id="@+id/tvFristname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="Frist Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toEndOf="@+id/tvEmail" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="Email"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Email"
        app:layout_constraintStart_toEndOf="@+id/Email" />

    <EditText
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Age"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <EditText
        android:id="@+id/tVId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="NIC"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvAge"
        app:layout_constraintTop_toBottomOf="@+id/tvAge" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFristname"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="242dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <TextView
        android:id="@+id/Nic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/nic"
        app:layout_constraintEnd_toEndOf="@+id/Age"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVId" />


</androidx.constraintlayout.widget.ConstraintLayout>